# newsletter-ai

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MIGRATION.md  Makefile  README.md  RELEASE_NOTES_v0.2.5.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
docs/: ARCHITECTURE.md  COMMAND_CARD.md  OPERATIONS.md  PROJECT_CLOSEOUT_v0.2.5.md  RESUME_GUIDE_v0.3.3.md  RESUME_GUIDE_v0.3.md
scripts/: build_digest_minimal.py  build_health_report.py  check_pipeline_status.py  run_daily_pipeline.py
templates/: digest_template.md
tests/: test_cli.py  test_cli_daily_source_registry.py  test_cli_dashboard.py  test_cli_feedback.py  test_cli_feedback_parser.py  test_cli_quality_sections.py  test_cli_quality_sources.py  test_cli_replay.py  test_cli_runs.py  test_cli_sources.py  test_cli_sources_fetch_replay.py  test_cli_sources_report.py  test_config.py  test_dashboard.py  test_dashboard_export.py  test_digest.py  test_dry_run_fixture_unification.py  test_e2e_fixture_flow.py  test_e2e_real_replay_flow.py  test_feedback.py  test_feedback_events.py  test_feedback_resolution.py  test_fetch.py  test_fixtures.py  test_health.py  test_legacy_scripts.py  test_makefile_targets.py  test_normalize.py  test_pipeline_quality_report.py  test_pipeline_run_index.py  test_pipeline_sections_integration.py  test_pipeline_source_failure_resilience.py  test_pipeline_source_registry.py  test_pipeline_status.py  test_preferences.py  test_publisher.py  test_quality_cli_current_run.py  test_quality_metrics.py  test_quality_section_distribution.py  test_rank.py  (+14 more)
(+64 files in other folders)
